# quivr

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: build-lint-test-coverage.yml
docs/source/: basics.rst  conf.py  development.rst  index.rst  installation.rst  usage.rst
docs/source/api/: attributes.rst  column_validators.rst  columns.rst  errors.rst  linkages.rst  modules.rst  overview.rst  quivr.rst  tables.rst
docs/source/examples/: index.rst  linkage.rst  linkages.py
docs/source/guides/: composition.rst  cross-table-links.rst  index.rst  interop.rst  nulls.rst  serde.rst
docs/source/guides/snippets/linkages/: pets_tables.py
docs/source/guides/snippets/serde/: taxi1.py  taxi2.py  taxi3.py  taxi4.py
examples/: coordinates.py  enums.py  extensions.py
quiver/: #tables.py#  __init__.py  concat.py  coordinates.py  defragment.py  errors.py  indexing.py  matrix.py  models.py  schemagraph.py  tables.py
quivr/: __init__.py  __version__.py  _arrow_utils.py  attributes.py  columns.py  concat.py  defragment.py  errors.py  extensiontypes.py  fields.py  indexing.py  linkage.py  matrix.py  schemagraph.py  tables.py  validators.py
quivr/experimental/: shmem.py
test/: test_attributes.py  test_columns.py  test_concat.py  test_defragment.py  test_experimental_shmem.py  test_extensiontypes.py  test_filtered_chunks.py  test_indexing.py  test_linkage.py  test_matrix.py  test_parallel_apply.py  test_query_speed.py  test_serialization.py  test_tables.py  test_typechecking.py  test_validators.py
test/typing_tests/: attributes.py  columns.py  linkages.py
