[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quivr"
description = "Container library for working with tabular Arrow data"
readme = "README.md"
authors = [
   { name = "Spencer Nelson", email = "spencer@spencerwnelson.com" }
]
requires-python = ">= 3.9"
dependencies = [
  "pandas",
  "pyarrow",
  "numpy",
  "mmh3",
  "typing_extensions>=4.0.0"
]
dynamic = [ "version" ]

[project.optional-dependencies]
docs = [
  "sphinx==7.2.2",
  "sphinx-autodoc-typehints",
  "sphinx-copybutton",
  "sphinx-toolbox",
  "furo==2023.08.17",
]

[project.urls]
Source = "https://github.com/spenczar/quivr"

[tool.hatch.build.targets.sdist]
include = [
  "/quivr",
]

[tool.hatch.version]
path = "quivr/__version__.py"

[tool.hatch.envs.dev]
dependencies = [
  "black",
  "isort",
  "mypy",
  "pandas-stubs",
  "pytest",
  "pytest-benchmark",
  "ruff",
  "ipython"
]

[tool.hatch.envs.dev.scripts]
check = [
  "lint",
  "typecheck",
  "test",
]
fix = [
  "ruff ./quivr ./test --fix"
]
lint = [
  "ruff check ./quivr ./test",
  "black --check ./quivr ./test",
  "isort --check-only ./quivr ./test"
]
format = [
  "black ./quivr ./test",
  "isort ./quivr ./test"
]
typecheck = [
  "mypy --strict ./quivr ./examples ./test/typing_tests",
]
test = [
  "pytest --benchmark-disable ./test {args}",
]
doctest = [
  "pytest --doctest-modules ./quivr {args}"
]
benchmark = [
  "pytest --benchmark-only ./test {args}"
]

[tool.hatch.envs.test]
dependencies = [
  "black",
  "isort",
  "mypy",
  "pandas-stubs",
  "pytest",
  "pytest-benchmark",
  "ruff",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11"]

[tool.hatch.envs.test.scripts]
all = [
  "ruff check ./quivr ./test",
  "black --check ./quivr ./test",
  "isort --check-only ./quivr ./test",
  "mypy --strict ./quivr ./examples ./test/typing_tests",
  "pytest --benchmark-disable ./test {args}",
  "pytest --doctest-modules ./quivr",  
]

benchmark = [
  "pytest --benchmark-only ./test"
]

[tool.hatch.envs.docs]
dependencies = [
  "sphinx==7.2.2",
  "sphinx-autodoc-typehints",
  "sphinx-copybutton",
  "sphinx-toolbox",
  "furo==2023.08.17",
]

[tool.hatch.envs.docs.scripts]
make-html = [
  "make -C docs html"
]

open-html = [
  "open docs/build/html/index.html"
]

clean = [
  "make -C docs clean"
]

rebuild = [
  "make -C docs clean",
  "make -C docs html"
]

[tool.black]
line-length = 110

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 110
target-version = "py311"

