[metadata]
name = quiver
version = 0.1.0
author = Spencer Nelson
author_email = spencer@spencerwnelson.com

[options]
python_requires = >= 3.11
packages =
    quiver
install_requires =
    pyarrow
    numpy
    mmh3

[options.extras_require]
tests =
    mypy
    pytest
    pytest-benchmark

mypy-stubs =
    pandas-stubs

[tool.black]
line-length = 110

[flake8]
max_line_length = 110
ignore =
    E203

[isort]
profile = black
